@@ -1,3 +1,8 @@
+2003-01-12  James Henstridge  <james@daa.com.au>
+
+	* module.py (Tarball.do_patch): if nobuild is set, go to
+	STATE_DONE on completion, rather than STATE_CONFIGURE.
+
 2003-01-10  Alex Duggan  <aldug@gnome.org>
 
 	* moduleinfo.py (gnome22.gnome-panel): get gnome-2-2 branch
